# canopen

./: README.rst  pyproject.toml
.github/workflows/: pr-linters.yaml  pythonpackage.yml
canopen/: emcy.py  network.py  nmt.py  timestamp.py
canopen/node/: local.py
canopen/objectdictionary/: __init__.py  eds.py
canopen/pdo/: base.py
canopen/profiles/: p402.py
canopen/sdo/: base.py  client.py  server.py
test/: test_local.py  test_network.py  test_node.py  test_od.py  test_pdo.py  test_sdo.py  test_time.py
